--- a/cm-web/index.html
+++ b/cm-web/index.html
@@ -4,8 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>cm-web</title>
+  <style>
+    body {
+      margin: 0px;
+    }
+  </style>
 </head>
-<body style="background-color: #606266">
+<body>
 <div id="app"></div>
 <!-- built files will be auto injected -->
 </body>
